
add_library(ncurses STATIC
            tinfo/comp_scan.c
            tinfo/init_keytry.c
            tinfo/lib_cur_term.c
            tinfo/lib_has_cap.c
            tinfo/read_entry.c
            tinfo/lib_data.c
            tinfo/getenv_num.c
            tinfo/lib_termcap.c
            tinfo/lib_longname.c
            tinfo/lib_kernel.c
            tinfo/lib_baudrate.c
            tinfo/comp_error.c
            tinfo/lib_tputs.c
            tinfo/captoinfo.c
            tinfo/comp_expand.c
            tinfo/comp_hash.c
            tinfo/lib_raw.c
            tinfo/parse_entry.c
            tinfo/use_screen.c
            tinfo/lib_termname.c
            tinfo/lib_ti.c
            tinfo/lib_napms.c
            tinfo/lib_setup.c
            tinfo/home_terminfo.c
            tinfo/lib_ttyflags.c
            tinfo/free_ttype.c
            tinfo/trim_sgr0.c
            tinfo/lib_tgoto.c
            tinfo/alloc_ttype.c
            tinfo/write_entry.c
            tinfo/lib_print.c
            tinfo/lib_acs.c
            tinfo/alloc_entry.c
            tinfo/name_match.c
            tinfo/comp_parse.c
            tinfo/entries.c
            tinfo/access.c
            tinfo/hashed_db.c
            tinfo/add_tries.c
            tinfo/db_iterator.c
            tinfo/lib_tparm.c
            tinfo/doalloc.c
            tinfo/strings.c
            tinfo/lib_options.c
            tinfo/obsolete.c
            tinfo/read_termcap.c
            trace/lib_tracebits.c
            trace/trace_tries.c
            trace/lib_traceatr.c
            trace/lib_tracemse.c
            trace/trace_buf.c
            trace/varargs.c
            trace/lib_tracedmp.c
            trace/trace_xnames.c
            trace/visbuf.c
            trace/lib_trace.c
            trace/lib_tracechr.c
            base/lib_colorset.c
            base/lib_delch.c
            base/lib_addstr.c
            base/lib_beep.c
            base/wresize.c
            base/lib_getch.c
            base/lib_scrreg.c
            base/lib_immedok.c
            base/lib_touch.c
            base/lib_vline.c
            base/lib_slkinit.c
            base/lib_leaveok.c
            base/lib_screen.c
            base/lib_insch.c
            base/lib_pad.c
            base/lib_newwin.c
            base/lib_wattroff.c
            base/lib_instr.c
            base/lib_clrbot.c
            base/safe_sprintf.c
            base/lib_clreol.c
            base/lib_overlay.c
            base/lib_mvwin.c
            base/lib_scanw.c
            base/keyok.c
            base/lib_slkatrof.c
            base/keybound.c
            base/new_pair.c
            base/lib_isendwin.c
            base/lib_clear.c
            base/lib_scroll.c
            base/lib_getstr.c
            base/lib_erase.c
            base/lib_echo.c
            base/lib_slkset.c
            base/use_window.c
            base/lib_initscr.c
            base/lib_delwin.c
            base/lib_slklab.c
            base/vsscanf.c
            base/lib_chgat.c
            base/lib_inchstr.c
            base/lib_winch.c
            base/lib_restart.c
            base/lib_window.c
            base/lib_slk.c
            base/lib_color.c
            base/lib_mouse.c
            base/tries.c
            base/lib_wattron.c
            base/lib_endwin.c
            base/lib_slkatron.c
            base/lib_slkrefr.c
            base/lib_nl.c
            base/lib_printw.c
            base/lib_clearok.c
            base/lib_slkcolor.c
            base/lib_scrollok.c
            base/legacy_coding.c
            base/lib_freeall.c
            base/key_defined.c
            base/lib_slkattr.c
            base/lib_set_term.c
            base/lib_refresh.c
            base/lib_bkgd.c
            base/lib_addch.c
            base/define_key.c
            base/lib_move.c
            base/lib_newterm.c
            base/lib_ungetch.c
            base/version.c
            base/lib_box.c
            base/nc_panel.c
            base/lib_flash.c
            base/lib_insdel.c
            base/lib_slkatrset.c
            base/lib_slkatr_set.c
            base/lib_insnstr.c
            base/lib_slkclear.c
            base/lib_hline.c
            base/lib_slktouch.c
            base/lib_dft_fgbg.c
            base/lib_redrawln.c
            base/resizeterm.c
            report_offsets.c
            report_hashing.c
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/codes.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/comp_captab.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/comp_userdefs.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/expanded.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/fallback.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/lib_gen.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/lib_keyname.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/names.c"
            "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses/unctrl.c")

if("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
    target_sources(ncurses PRIVATE 
                   win32con/win_driver.c
                   win32con/gettimeofday.c
                   win32con/wcwidth.c)
else()
    target_sources(ncurses PRIVATE 
                   tty/lib_vidattr.c
                   tty/lib_mvcur.c
                   tty/lib_twait.c
                   tty/hashmap.c
                   tty/hardscroll.c
                   tty/tty_update.c
                   tty/lib_tstp.c)
endif()

target_compile_definitions(ncurses PRIVATE "_DEFAULT_SOURCE" 
                                           "_XOPEN_SOURCE=600"
                                           "HAVE_CONFIG_H"
                                           "DATA_DIR=\"/usr/share\"")
target_include_directories(ncurses PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}"
                                           "${CMAKE_CURRENT_SOURCE_DIR}/../include"
                                           "${CMAKE_CURRENT_SOURCE_DIR}/../gen/ncurses")
target_include_directories(ncurses PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../gen/include")

install(TARGETS ncurses DESTINATION "lib")
